Updated seeded compesation data. Added compensation test cases.

--- a/code-challenge.Tests/code-challenge.Tests.Integration.csproj
+++ b/code-challenge.Tests/code-challenge.Tests.Integration.csproj
@@ -9,6 +9,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="resources\CompensationSeedData.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="resources\CompensationSeedData.json">
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
     <Content Include="resources\EmployeeSeedData.json">
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
