--- a/code-challenge/Properties/launchSettings.json
+++ b/code-challenge/Properties/launchSettings.json
@@ -21,7 +21,8 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "http://localhost:8080/"
+      "applicationUrl": "http://localhost:8080/",
+      "launchUrl": "http://localhost:8080/swagger"
     }
   }
 }
