Changed test data to get source control to recognize a change to turn on the "Copy always" option that was breaking integration tets.

--- a/code-challenge.Tests/code-challenge.Tests.Integration.csproj
+++ b/code-challenge.Tests/code-challenge.Tests.Integration.csproj
@@ -15,6 +15,7 @@
   <ItemGroup>
     <Content Include="resources\CompensationSeedData.json">
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="resources\EmployeeSeedData.json">
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
